--- a/correlation.ipynb
+++ b/correlation.ipynb
@@ -292,6 +292,107 @@
    "source": [
     "## EDA"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0d93b60a-8a2b-456e-8875-e1007fe7dd92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 97 entries, 0 to 96\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   S No            97 non-null     int64  \n",
+      " 1   AGE             97 non-null     int64  \n",
+      " 2   HEIGHT          97 non-null     int64  \n",
+      " 3   WEIGHT          97 non-null     int64  \n",
+      " 4   SEX             97 non-null     object \n",
+      " 5   ACTIVITY LEVEL  97 non-null     object \n",
+      " 6   PAIN 1          97 non-null     float64\n",
+      " 7   PAIN 2          97 non-null     float64\n",
+      " 8   PAIN 3          97 non-null     float64\n",
+      " 9   PAIN 4          97 non-null     float64\n",
+      " 10  MBTI            97 non-null     object \n",
+      " 11  E               97 non-null     int64  \n",
+      " 12  I               97 non-null     int64  \n",
+      " 13  S               97 non-null     int64  \n",
+      " 14  N               97 non-null     int64  \n",
+      " 15  T               97 non-null     int64  \n",
+      " 16  F               97 non-null     int64  \n",
+      " 17  J               97 non-null     int64  \n",
+      " 18  P               97 non-null     int64  \n",
+      " 19  POSTURE         97 non-null     object \n",
+      "dtypes: float64(4), int64(12), object(4)\n",
+      "memory usage: 15.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daf3c3fa-2507-49bd-b523-ba3817d43c53",
+   "metadata": {},
+   "source": [
+    "- So, we have 12 featues filled with integer values, 4 string features, 4 float features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fdd5a587-2fb5-4ef5-b12e-0ef743a93090",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "S No              0\n",
+       "AGE               0\n",
+       "HEIGHT            0\n",
+       "WEIGHT            0\n",
+       "SEX               0\n",
+       "ACTIVITY LEVEL    0\n",
+       "PAIN 1            0\n",
+       "PAIN 2            0\n",
+       "PAIN 3            0\n",
+       "PAIN 4            0\n",
+       "MBTI              0\n",
+       "E                 0\n",
+       "I                 0\n",
+       "S                 0\n",
+       "N                 0\n",
+       "T                 0\n",
+       "F                 0\n",
+       "J                 0\n",
+       "P                 0\n",
+       "POSTURE           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53bf7b72-ebba-44f7-a030-579f35990c6a",
+   "metadata": {},
+   "source": [
+    "- Perfect, there is no null values"
+   ]
   }
  ],
  "metadata": {
