--- a/correlation.ipynb
+++ b/correlation.ipynb
@@ -721,6 +721,309 @@
     "    - **ENFP** (8): people-centered creators with a focus on possibilities and a contagious enthusiasm for new ideas, people and activities\n",
     "    - **ESFP** (5): extraverted, sensing, feeling, perceiving"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fe41140-918f-472f-a331-dd136df54660",
+   "metadata": {},
+   "source": [
+    "## Transforming variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2910b881-ff17-4705-8912-a6d8cf51740f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transforming categorical variables in a Pandas dataframe, df, into numerical\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le = LabelEncoder()\n",
+    "df.SEX  = le.fit_transform(df.SEX )\n",
+    "df.MBTI = le.fit_transform(df.MBTI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9a6e91d8-afc6-49cd-b68c-c86e0eb8135d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['ACTIVITY LEVEL'] = df['ACTIVITY LEVEL'].replace({'Low' : 0, 'Moderate' : 1, 'High': 2})\n",
+    "df.POSTURE = df.POSTURE.replace({'A' : 0, 'B' : 1, 'C': 2, 'D':3})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dbb2d75-933e-49c5-9cf7-abad4e0dea3b",
+   "metadata": {},
+   "source": [
+    "- ACTIVITY LEVEL : {0 : Low, 1: Moderate, 2:High}\n",
+    "- POSTURE : {A-D : 0-3}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4bb0d383-0f70-4b1d-bc30-bbe1cae9835d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>S No</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>HEIGHT</th>\n",
+       "      <th>WEIGHT</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>ACTIVITY LEVEL</th>\n",
+       "      <th>PAIN 1</th>\n",
+       "      <th>PAIN 2</th>\n",
+       "      <th>PAIN 3</th>\n",
+       "      <th>PAIN 4</th>\n",
+       "      <th>MBTI</th>\n",
+       "      <th>E</th>\n",
+       "      <th>I</th>\n",
+       "      <th>S</th>\n",
+       "      <th>N</th>\n",
+       "      <th>T</th>\n",
+       "      <th>F</th>\n",
+       "      <th>J</th>\n",
+       "      <th>P</th>\n",
+       "      <th>POSTURE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>53</td>\n",
+       "      <td>62</td>\n",
+       "      <td>125</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13</td>\n",
+       "      <td>18</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>52</td>\n",
+       "      <td>69</td>\n",
+       "      <td>157</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>15</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>21</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "      <td>69</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>15</td>\n",
+       "      <td>6</td>\n",
+       "      <td>16</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>51</td>\n",
+       "      <td>66</td>\n",
+       "      <td>175</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>15</td>\n",
+       "      <td>21</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>11</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>45</td>\n",
+       "      <td>63</td>\n",
+       "      <td>199</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>15</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   S No  AGE  HEIGHT  WEIGHT  SEX  ACTIVITY LEVEL  PAIN 1  PAIN 2  PAIN 3  \\\n",
+       "0     1   53      62     125    0               0     0.0     0.0     0.0   \n",
+       "1     2   52      69     157    1               2     7.0     8.0     5.0   \n",
+       "2     3   30      69     200    1               2     0.0     0.0     0.0   \n",
+       "3     4   51      66     175    1               1     9.5     9.5     9.5   \n",
+       "4     5   45      63     199    0               1     4.0     5.0     2.0   \n",
+       "\n",
+       "   PAIN 4  MBTI   E   I   S   N   T   F   J   P  POSTURE  \n",
+       "0     0.0     4  18   3  17   9   9  13  18   4        0  \n",
+       "1     3.0    13   6  15  14  12  21   3  13   9        1  \n",
+       "2     0.0     6  15   6  16  10  15   9  12  10        0  \n",
+       "3     1.5    13   6  15  21   5  13  11  19   3        3  \n",
+       "4     2.0     0  14   7  20   6   9  15  16   6        0  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9f02ad1-6a76-4e93-b105-dc893ff9000b",
+   "metadata": {},
+   "source": [
+    "## Get predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d7b2db52-7092-4d51-a470-f67bbc7ea0dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import datasets, linear_model\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "84395938-0662-4c0f-b4aa-6a2bd6836d1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\n\u001b[0;32m      2\u001b[0m y \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mtarget\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\generic.py:5902\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5895\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m   5896\u001b[0m     name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_internal_names_set\n\u001b[0;32m   5897\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_metadata\n\u001b[0;32m   5898\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_accessors\n\u001b[0;32m   5899\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_info_axis\u001b[38;5;241m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   5900\u001b[0m ):\n\u001b[0;32m   5901\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[name]\n\u001b[1;32m-> 5902\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mobject\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getattribute__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'data'"
+     ]
+    }
+   ],
+   "source": [
+    "X = df.data\n",
+    "y = df.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "073ed915-37e8-46ff-b3cb-f1c86c8989a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = [(\"LogisticRegression\",LogisticRegression()),\n",
+    "       (\"KNN Classifier\", KNeighborsClassifier()),\n",
+    "       (\"Decision Tree\",DecisionTreeClassifier()),\n",
+    "       (\"RandomForest\",RandomForestClassifier()),\n",
+    "      (\"AdaBoost\",AdaBoostClassifier()),\n",
+    "      (\"XGBoost\",XGBClassifier())]\n",
+    "\n",
+    "for name,model in lst:\n",
+    "    model.fit(x_train,y_train)\n",
+    "    y1 = model.predict(x_train)\n",
+    "    accuracy = accuracy_score(y_train,y1)\n",
+    "    y2 = model.predict(x_test)\n",
+    "    acc_te = accuracy_score(y_test,y2)\n",
+    "    print(f\"For {name}::\\nThe Training Accuracy is: {accuracy}\\nThe Testing Accuracy is: {acc_te}\")\n",
+    "    print(\"--\"*40)"
+   ]
   }
  ],
  "metadata": {
