--- a/correlation.ipynb
+++ b/correlation.ipynb
@@ -968,6 +968,339 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "22cecfc2-a3cf-43a1-bbe0-0b6dc7059478",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>S No</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>HEIGHT</th>\n",
+       "      <th>WEIGHT</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>ACTIVITY LEVEL</th>\n",
+       "      <th>PAIN 1</th>\n",
+       "      <th>PAIN 2</th>\n",
+       "      <th>PAIN 3</th>\n",
+       "      <th>PAIN 4</th>\n",
+       "      <th>MBTI</th>\n",
+       "      <th>E</th>\n",
+       "      <th>I</th>\n",
+       "      <th>S</th>\n",
+       "      <th>N</th>\n",
+       "      <th>T</th>\n",
+       "      <th>F</th>\n",
+       "      <th>J</th>\n",
+       "      <th>P</th>\n",
+       "      <th>POSTURE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.00000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>49.000000</td>\n",
+       "      <td>43.855670</td>\n",
+       "      <td>65.731959</td>\n",
+       "      <td>159.43299</td>\n",
+       "      <td>0.494845</td>\n",
+       "      <td>0.298969</td>\n",
+       "      <td>2.139175</td>\n",
+       "      <td>3.747423</td>\n",
+       "      <td>1.943299</td>\n",
+       "      <td>2.530928</td>\n",
+       "      <td>6.298969</td>\n",
+       "      <td>12.690722</td>\n",
+       "      <td>8.288660</td>\n",
+       "      <td>15.134021</td>\n",
+       "      <td>11.041237</td>\n",
+       "      <td>10.505155</td>\n",
+       "      <td>13.443299</td>\n",
+       "      <td>10.319588</td>\n",
+       "      <td>11.680412</td>\n",
+       "      <td>1.381443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>28.145456</td>\n",
+       "      <td>16.776093</td>\n",
+       "      <td>3.737522</td>\n",
+       "      <td>36.19591</td>\n",
+       "      <td>0.502571</td>\n",
+       "      <td>0.580319</td>\n",
+       "      <td>2.572635</td>\n",
+       "      <td>3.191071</td>\n",
+       "      <td>2.587909</td>\n",
+       "      <td>3.111483</td>\n",
+       "      <td>4.103263</td>\n",
+       "      <td>5.717956</td>\n",
+       "      <td>5.697146</td>\n",
+       "      <td>4.833970</td>\n",
+       "      <td>4.732242</td>\n",
+       "      <td>5.332924</td>\n",
+       "      <td>5.297344</td>\n",
+       "      <td>5.727395</td>\n",
+       "      <td>5.711003</td>\n",
+       "      <td>1.055179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>58.000000</td>\n",
+       "      <td>68.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>63.000000</td>\n",
+       "      <td>135.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>49.000000</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>157.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>68.000000</td>\n",
+       "      <td>183.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>82.000000</td>\n",
+       "      <td>74.000000</td>\n",
+       "      <td>263.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>9.500000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            S No        AGE     HEIGHT     WEIGHT        SEX  ACTIVITY LEVEL  \\\n",
+       "count  97.000000  97.000000  97.000000   97.00000  97.000000       97.000000   \n",
+       "mean   49.000000  43.855670  65.731959  159.43299   0.494845        0.298969   \n",
+       "std    28.145456  16.776093   3.737522   36.19591   0.502571        0.580319   \n",
+       "min     1.000000  11.000000  58.000000   68.00000   0.000000        0.000000   \n",
+       "25%    25.000000  30.000000  63.000000  135.00000   0.000000        0.000000   \n",
+       "50%    49.000000  45.000000  66.000000  157.00000   0.000000        0.000000   \n",
+       "75%    73.000000  56.000000  68.000000  183.00000   1.000000        0.000000   \n",
+       "max    97.000000  82.000000  74.000000  263.00000   1.000000        2.000000   \n",
+       "\n",
+       "          PAIN 1     PAIN 2     PAIN 3     PAIN 4       MBTI          E  \\\n",
+       "count  97.000000  97.000000  97.000000  97.000000  97.000000  97.000000   \n",
+       "mean    2.139175   3.747423   1.943299   2.530928   6.298969  12.690722   \n",
+       "std     2.572635   3.191071   2.587909   3.111483   4.103263   5.717956   \n",
+       "min     0.000000   0.000000   0.000000   0.000000   0.000000   2.000000   \n",
+       "25%     0.000000   0.000000   0.000000   0.000000   3.000000   8.000000   \n",
+       "50%     1.000000   3.000000   0.500000   0.000000   6.000000  13.000000   \n",
+       "75%     4.000000   7.000000   3.500000   5.000000   9.000000  18.000000   \n",
+       "max     9.500000  10.000000  10.000000  10.000000  14.000000  21.000000   \n",
+       "\n",
+       "               I          S          N          T          F          J  \\\n",
+       "count  97.000000  97.000000  97.000000  97.000000  97.000000  97.000000   \n",
+       "mean    8.288660  15.134021  11.041237  10.505155  13.443299  10.319588   \n",
+       "std     5.697146   4.833970   4.732242   5.332924   5.297344   5.727395   \n",
+       "min     0.000000   5.000000   1.000000   0.000000   2.000000   0.000000   \n",
+       "25%     3.000000  12.000000   7.000000   6.000000  10.000000   5.000000   \n",
+       "50%     8.000000  15.000000  11.000000  11.000000  13.000000  11.000000   \n",
+       "75%    13.000000  19.000000  14.000000  14.000000  18.000000  16.000000   \n",
+       "max    19.000000  25.000000  21.000000  22.000000  24.000000  20.000000   \n",
+       "\n",
+       "               P    POSTURE  \n",
+       "count  97.000000  97.000000  \n",
+       "mean   11.680412   1.381443  \n",
+       "std     5.711003   1.055179  \n",
+       "min     2.000000   0.000000  \n",
+       "25%     6.000000   1.000000  \n",
+       "50%    11.000000   1.000000  \n",
+       "75%    17.000000   2.000000  \n",
+       "max    22.000000   3.000000  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bdab8405-1431-463d-be73-cf6ac7e94383",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 97 entries, 0 to 96\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   S No            97 non-null     int64  \n",
+      " 1   AGE             97 non-null     int64  \n",
+      " 2   HEIGHT          97 non-null     int64  \n",
+      " 3   WEIGHT          97 non-null     int64  \n",
+      " 4   SEX             97 non-null     int32  \n",
+      " 5   ACTIVITY LEVEL  97 non-null     int64  \n",
+      " 6   PAIN 1          97 non-null     float64\n",
+      " 7   PAIN 2          97 non-null     float64\n",
+      " 8   PAIN 3          97 non-null     float64\n",
+      " 9   PAIN 4          97 non-null     float64\n",
+      " 10  MBTI            97 non-null     int32  \n",
+      " 11  E               97 non-null     int64  \n",
+      " 12  I               97 non-null     int64  \n",
+      " 13  S               97 non-null     int64  \n",
+      " 14  N               97 non-null     int64  \n",
+      " 15  T               97 non-null     int64  \n",
+      " 16  F               97 non-null     int64  \n",
+      " 17  J               97 non-null     int64  \n",
+      " 18  P               97 non-null     int64  \n",
+      " 19  POSTURE         97 non-null     int64  \n",
+      "dtypes: float64(4), int32(2), int64(14)\n",
+      "memory usage: 14.5 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "id": "d7b2db52-7092-4d51-a470-f67bbc7ea0dc",
    "metadata": {},
